--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,7 +24,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  min-height: 100vh;
+  min-height: auto;
 }
 
 /* header styles */
@@ -65,7 +65,7 @@ header {
 
 #h1bigger{
   font-weight: 600;
-  font-size: 36px;
+  font-size: 48px;
 }
 
 /* navigation styles */
@@ -73,12 +73,12 @@ nav ul li a,
 .nav-link {
   color: var(--middle-blue);
   font-weight: 600;
-  font-size: 26px;
+  font-size: 30px;
   text-decoration: none;
   padding: 0.5rem 1rem;
   display: flex;
   align-items: center;
-  margin-left: 275px;
+  margin-left: 395px;
   transition: background-color 0.3s ease;
 }
 
@@ -103,7 +103,7 @@ nav ul li a:hover,
   width: 65%;
   height: 100%;
   margin: 20px auto;
-  padding: 20px;
+  padding: 36px;
   font-family: "Arial", sans-serif;
   color: var(--dark-blue);
   background-color: #f9f9f986;
@@ -119,12 +119,12 @@ nav ul li a:hover,
 footer {
   background-color: var(--light-blue);
   text-align: center;
-  padding: 1rem;
+  padding: .5rem;
   margin-top: auto;
 }
 
 .footer-icons{
-  font-size: 28px;
+  font-size: 31px;
 }
 
 /* contact page styles */
@@ -135,6 +135,7 @@ footer {
 
 .contact-container {
   max-width: 500px;
+  height: 67.5vh;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid var(--light-blue);
@@ -145,13 +146,13 @@ footer {
 }
 
 .contact-container h1 {
-  margin-bottom: 34px;
+  margin-bottom: 50px;
   font-size: 24px;
   color: var(--dark-blue);
 }
 
 .contact-container form > div {
-  margin-bottom: 36px;
+  margin-bottom: 68px;
   text-align: left;
 }
 
@@ -204,7 +205,7 @@ footer {
 }
 
 .portfolioContainer {
-  max-width: 1200px;
+  max-width: 1220px;
   margin: 0 auto;
   padding: 40px 20px;
   text-align: center;
@@ -225,7 +226,7 @@ footer {
 }
 
 .card{
-  background-color: #f9f9f999;
+  background-color: #f9f9f9b2;
 }
 
 .projectCard {
